# stock-portfolio-analyzer

./: .gitignore  README.md  config.yaml  example.py  example_time_analysis.py  portfolio.csv  pyproject.toml  requirements.txt  revolut_report.py
src/stock_portfolio_analyzer/: __init__.py  cli.py  config.py  fetcher.py  logger.py  main.py  portfolio.py  time_analysis.py  transactions.py  utils.py
tests/: test_portfolio.py
